# fits-multires-converter

./: .gitmodules  CMakeLists.txt
include/: compressor.h  fitsconverter.h  lz4compressor.h
src/: CMakeLists.txt  fitsconverter.cpp  lz4compressor.cpp  main.cpp
